# compile-time-init-build

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  USER_GUIDE.md  conanfile.py  conanfile.txt  llvm.sh  pyproject.toml  requirements.txt
benchmark/: CMakeLists.txt  big_nexus.cpp
benchmark/cib/: CMakeLists.txt  big_nexus.cpp
benchmark/flow/: CMakeLists.txt  compilation.cpp  flow_graph.hpp  inline_bench.cpp  run_bench.cpp
benchmark/lookup/: CMakeLists.txt  lookup_datasets.hpp  pseudo_pext.cpp
benchmark/lookup/algorithms/: allocator.hpp  frozen_map.hpp  frozen_unordered_map.hpp  mph.hpp  mph_pext.hpp  pseudo_pext.hpp  std_map.hpp  std_unordered_map.hpp
benchmark/msg/: CMakeLists.txt  handler_bench.cpp
examples/: CMakeLists.txt
examples/bare_cmake/: CMakeLists.txt  main.cpp
examples/cib_serial_port/: CMakeLists.txt  main.cpp
examples/flow/: CMakeLists.txt
examples/flow/daily_routine/: CMakeLists.txt
examples/flow_daily_routine/: CMakeLists.txt  main.cpp
examples/hello_world/: CMakeLists.txt  README.md  core.hpp  dont_panic.cpp  dont_panic.hpp  hello_world.hpp  lazy_dog.hpp  main.cpp  say_hello_world.hpp
examples/log/: CMakeLists.txt
examples/log/binary_custom/: CMakeLists.txt  lib.cpp  logger.hpp  main.cpp
examples/log/binary_fixed_id/: CMakeLists.txt  lib.cpp  main.cpp
examples/log/binary_normal/: CMakeLists.txt  lib.cpp  logger.hpp
examples/log/binary_stable_ids/: CMakeLists.txt  lib.cpp  logger.hpp  stable_strings.json
examples/log/custom/: CMakeLists.txt  main.cpp
examples/log/fmt_custom_level/: CMakeLists.txt  main.cpp
examples/log/fmt_multi/: CMakeLists.txt  main.cpp
examples/log/fmt_normal/: CMakeLists.txt  main.cpp
examples/log/fmt_tests/: CMakeLists.txt  main.cpp
examples/log/secure/: CMakeLists.txt  main.cpp
examples/nexus/: CMakeLists.txt
examples/nexus/hello_world/: CMakeLists.txt  README.md  core.hpp  dont_panic.hpp
examples/nexus/serial_port/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  Concurrency.hpp  big_nexus.cpp  callback.cpp  nexus.cpp  readme_hello_world.cpp  set.cpp  test_builder_meta.cpp  test_callback.cpp  test_meta.cpp  test_nexus.cpp
test/cib/: CMakeLists.txt  builder_meta.cpp  callback.cpp  callback_uninit.cpp  nexus.cpp  readme_hello_world.cpp  set.cpp  special_members.hpp  tuple.cpp  tuple_algorithms.cpp
test/cib/detail/: type_list.cpp  type_pack_element.cpp  type_to_string_view.cpp
test/conc/: concurrency.hpp
test/container/: Array.cpp  ArrayTest.cpp  ClumpyIntegralMapTest.cpp  ConstexprMap.cpp  ConstexprMapTest.cpp  ConstexprMultiMap.cpp  ConstexprMultiMapTest.cpp  ConstexprSet.cpp  ConstexprSetTest.cpp  DoubleLinkedList.cpp  DoubleLinkedListTest.cpp  LinkedList.cpp  LinkedListTest.cpp  PriorityQueue.cpp  PriorityQueueTest.cpp  Queue.cpp  QueueTest.cpp  Vector.cpp  VectorTest.cpp  constexpr_map.cpp  constexpr_multimap.cpp  constexpr_set.cpp  log.hpp  queue.cpp  vector.cpp
test/detail/: indexed_tuple.cpp  meta.cpp  ordered_set.cpp  tuple.cpp  type_pack_element.cpp  type_to_string_view.cpp
test/flow/: CMakeLists.txt  builder.cpp  custom_log_levels.cpp  debug_flow.cpp  debug_flow.test.graph.mmd  flow.cpp  flow_cib_func.cpp  flow_uninit.cpp  graph.cpp  graph_builder.cpp  log_levels.cpp  logging.cpp  separate_actions.cpp
test/flow/fail/: CMakeLists.txt  cyclic_flow.cpp  debug_subgraph.cpp  mismatched_flow_runtime_conditional.cpp  node_explicitly_added_twice.cpp  only_reference_added.cpp
test/interrupt/: CMakeLists.txt  InterruptManagerTest.cpp  common.hpp  dynamic_controller.cpp  id_irq_impl.cpp  irq_impl.cpp  manager.cpp  policies.cpp  shared_irq_impl.cpp  shared_sub_irq_impl.cpp  sub_irq_impl.cpp
test/interrupt/fail/: CMakeLists.txt  nonexistent_flow.cpp
test/log/: CMakeLists.txt  catalog1_lib.cpp  catalog2_lib.cpp  catalog2a_lib.cpp  catalog2b_lib.cpp  catalog_app.cpp  catalog_enums.hpp  catalog_extra.json  catalog_lib.cpp  encoder.cpp  env.cpp  fmt_logger.cpp  level.cpp  log.cpp  logger.cpp  mipi_encoder.cpp  mipi_logger.cpp  module_id.cpp  stable_strings.json  testing_logger.hpp  unit.cpp
test/log_binary/: CMakeLists.txt  catalog1_lib.cpp  catalog2a_lib.cpp  catalog2b_lib.cpp  catalog_app.cpp  catalog_concurrency.hpp  catalog_destination.hpp  catalog_enums.hpp  encoder.cpp  level.cpp  mipi_logger.cpp  unit.cpp
test/log_binary/catalog/: CMakeLists.txt  catalog1_lib.cpp  catalog2a_lib.cpp  catalog2b_lib.cpp  catalog_app.cpp  catalog_concurrency.hpp  catalog_destination.hpp  catalog_enums.hpp  catalog_extra.json  catalog_output_test.py  conftest.py  stable_strings.json
test/log_fmt/: CMakeLists.txt  fmt_logger.cpp  level.cpp
test/lookup/: CMakeLists.txt  cx_value.hpp  direct_array.cpp  fast_hash.cpp  input.cpp  linear_search.cpp  lookup.cpp  pseudo_pext.cpp  pseudo_pext_lookup.cpp  strategies.cpp
test/lookup/pbt/: CMakeLists.txt  conftest.py  (+1 more)
test/match/: CMakeLists.txt  and.cpp  constant.cpp  equivalence.cpp  implies.cpp  not.cpp  or.cpp  predicate.cpp  simplify_and.cpp  simplify_custom.cpp  simplify_not.cpp  simplify_or.cpp  sum_of_products.cpp  test_matcher.hpp
test/msg/: CMakeLists.txt  callback.cpp  disjoint_field.cpp  field.cpp  field_extract.cpp  field_insert.cpp  field_matchers.cpp  gen_handler_data.py  handler.cpp  handler_bench.cpp  handler_builder.cpp  handler_uninit.cpp  impossible_match_callback.cpp  impossible_match_field.cpp  indexed_builder.cpp  indexed_callback.cpp  indexed_handler.cpp  indexed_handler_uninit.cpp  match.cpp  message.cpp  relaxed_message.cpp  rle_indexed_builder.cpp  send.cpp
test/nexus/: CMakeLists.txt  callback.cpp  callback_uninit.cpp  injected_nexus_service.cpp  nexus.cpp  service.cpp
test/sc/: CMakeLists.txt  format.cpp  string_constant.cpp
test/seq/: CMakeLists.txt  sequencer.cpp
usage_test/: CMakeLists.txt  main.cpp  main_cib.cpp  main_flow.cpp  main_interrupt.cpp  main_log.cpp  main_log_binary.cpp  main_log_fmt.cpp  main_lookup.cpp  main_match.cpp  main_msg.cpp  main_nexus.cpp  main_seq.cpp
(+304 files in other folders)
